--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Working with Data Collections</title>
-    <script defer crs="script.js"></script>
+    <script defer src="scriptPart1.js"></script>
   </head>
 <body>
     <h1>Working with Data Collections</h1> 
